--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html lang="en" dir="ltr">
 
 <head>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link rel="icon" href="images/icon.ico">
+  <!-- Bootstrap Scripts -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Montserrat:wght@100&family=Sacramento&display=swap" rel="stylesheet">
+  <!--para carregar o css no node.js(servidor-backend)-->
+ <link rel="stylesheet" type="text/css" href="css/styles.css">
   <meta charset="utf-8">
       
   <meta name="language" content="pt">
@@ -18,53 +28,61 @@
   <meta property="og:type" content="page">
       
   <meta property="article:author" content="LaraCondelipes">
-  <link rel="icon" href="images/icon.ico">
-  <!-- Bootstrap Scripts -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Montserrat:wght@100&family=Sacramento&display=swap" rel="stylesheet">
-  <!--para carregar o css no node.js(servidor-backend)-->
-  <link rel="stylesheet" type="text/css" href="css/styles.css">
+
 </head>
 
 <body>
+  <form action="/" method="post">
+  </form>
+
   <div class="container">
-    <form action="/" method="post">
-    </form>
     <div class="row simbolo">
       <img src="images/simbolo.jpg" alt="simbolo-img">
       <h1 class="titlekps">KPS Montijo</h1>
     </div>
+  </div>
 
-    <div class="row">
-      <div class="row">
-        <h1 class="titlesenseis">Senseis:</h1>
+  <div class="container">
+    <div class="row justify-content-center">
+      <h1 class="col-md-6 col-xs-12 titlesenseis">Senseis:</h1>
+  </div>
+</div>
+
+<div class="container">
+<div class="row">
+  <div class="col-md-3 col-xs-12">
+    <img class="img-fluid SenseiJoana" src="images/SenseiJoana.jpg" alt="Sensei Joana">
+  </div>
+  <div class="col-md-2 col-xs-12">
+    <h2 class="nome1">Sensei Joana<br>4ºDan</h2>
+  </div>
+  <div class="col-md-2 col-xs-12">
+    <img class="img-fluid fenix" src="images/fenix_kps.jpg" alt="fenix">
+  </div>
+  <div class="col-md-2 col-xs-12">
+    <h2 class="nome2">Sensei João<br>4ºDan</h2>
+  </div>
+  <div class="col-md-3 col-xs-12">
+    <img class="img-fluid SenseiJoao" src="images/SenseiJoao.jpg" alt="Sensei Joao">
+  </div>
+</div>
+</div>
+
+      <div class="container">
+        <div class="row justify-content-center">
+          <p class="col-md-8  col-xs-12 profile">Instrutores filiados no Karate-Do Portugal Shotokan, credenciados pelo IPDJ <br>(Instituto Português do Desporto e Juventude)<br>
+            Experiência e resultados competitivos a nível nacional e internacional.
+            <br>Árbitros nacionais da Federação Nacional de Karate (FNKP).
+          </p>
+        </div>
+
       </div>
 
-      <div class="col-md-3">
-        <img class="SenseiJoana" src="images/SenseiJoana.jpg" alt="Sensei Joana">
-      </div>
-      <div class="col-md-2">
-        <h2 class="nome1">Sensei Joana<br>4ºDan</h2>
-      </div>
-      <div class="col-md-2">
-        <img class="fenix" src="images/fenix_kps.jpg" alt="fenix">
-      </div>
-      <div class="col-md-2">
-        <h2 class="nome2">Sensei João<br>4ºDan</h2>
-      </div>
-      <div class="col-md-3">
-        <img class="SenseiJoao" src="images/SenseiJoao.jpg" alt="Sensei Joao">
-      </div>
-      <p class="profile">Instrutores filiados no Karate-Do Portugal Shotokan, credenciados pelo IPDJ <br>(Instituto Português do Desporto e Juventude)<br>
-        Experiência e resultados competitivos a nível nacional e internacional.
-        <br>Árbitros nacionais da Federação Nacional de Karate (FNKP).
-      </p>
-    </div>
 
 
+
+
+  <div class="container">
     <div class="row kpsimage">
       <img src="images/imgKPSassociacao.jpg" alt="kps-img">
       <h2 class="titleassociacao">A Associação KPS</h2>
@@ -76,24 +94,28 @@
       <a class="linkkps" href="https://kpshotokan.wordpress.com/" style="text-decoration:none">Visitar a KPS</a>
     </div>
 
+  </div>
 
 
+  <div class="container">
     <div class="row horario">
       <h2>Horário aulas</h2>
       <p>Terças e Sextas</p>
     </div>
+  </div>
+  <div class="container">
     <div class="row">
-      <div class="col-md-5">
+      <div class="col-md-4 col-xs-12">
         <p class="Benjamins">
           Classe Benjamins<br>18h30-19h15
         </p>
       </div>
-      <div class="col-md-2">
+      <div class="col-md-4 col-xs-12">
         <p class="Infantil">
           Classe Infantil<br>19h15-20h15
         </p>
       </div>
-      <div class="col-md-5">
+      <div class="col-md-4 col-xs-12">
         <p class="Adultos">
           Classe Adultos<br>20h15-21h15
         </p>
@@ -102,31 +124,40 @@
 
 
     <hr>
+  </div>
+  <div class="container">
     <div class="row ondeestamos">
-      <div class="col-md-4">
+      <div class="col-md-4 col-xs-12">
         <h2>Contactos</h2>
         <p>telefone:<br> 913 942 773<br> 915 791 510<br>21 231 0862</p>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-4 col-xs-12">
         <h2>Onde estamos:</h2>
         <p>R. Alm. Cândido dos Reis 44,<br> 2870-234 Montijo</p>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-4 col-xs-12">
         <img class="imageclube" src="images/imageclub.jpg" alt="imagem clube">
-        <iframe class="map"
+        <iframe class=" map"
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d778.3813419151093!2d-8.973988911866117!3d38.70574549871879!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd1939cac52654d5%3A0x19b8a96cf34356b9!2sBD2J%20-%20Banda%20Democr%C3%A1tica%202%20de%20Janeiro!5e0!3m2!1spt-PT!2spt!4v1640953248349!5m2!1spt-PT!2spt"
           width="250" height="100" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
       </div>
+
+
+
     </div>
 
+  </div>
 
+  <div class="container">
     <footer class="red-section" id="footer">
       <i class="social-icon fab fa-facebook-f"></i>
       <i class="social-icon fas fa-envelope"></i>
       <p class="Copyright">© Copyright 2022 KPS Montijo</p>
     </footer>
-
   </div>
+
+
+
 </body>
 
 
